modal formatting - instructions, fixed alignment of header display and tab line

--- a/client/StyleSheets/_APIKeyModal.scss
+++ b/client/StyleSheets/_APIKeyModal.scss
@@ -21,7 +21,14 @@
         background-color: $loading-color-hover;
     }
 
+    
 }
+
+#modal-instructions {
+    font-family: Helvetica, sans-serif;
+    color: white;
+}
+
 #api-key-input {
     font-family: Helvetica, sans-serif;
 }
