--- a/client/StyleSheets/_historyDisplay.scss
+++ b/client/StyleSheets/_historyDisplay.scss
@@ -80,7 +80,7 @@
         // color: $highlight-color;
         align-items: left;
         padding-left: 10px;
-        height: 31px;
+        height: 32px;
         border-bottom: 1px solid $loading-color;
 
         // border-bottom-color: black;
@@ -90,7 +90,7 @@
 
     #clear-history-button {
         border-style: none;
-        height: 31px;
+        height: 32px;
         background-color: $background-color;
         font-size: 13px;
     }
